--- a/src/jade/banner-2.jade
+++ b/src/jade/banner-2.jade
@@ -9,7 +9,6 @@ html
     meta(charset="utf-8")
     body
         a(href="#")
-            .banner-1
-                .container
-                    img(src="img/1.png")
-                    img(src="img/2.png")
+            .banner-2
+                img(src="img/t2.png")
+                img(src="img/t4.png")
