--- a/src/styl/banner-1.styl
+++ b/src/styl/banner-1.styl
@@ -1,5 +1,6 @@
 .banner-1
   position relative
+  user-select none
   width 240px
   height 400px
   overflow hidden
@@ -9,3 +10,14 @@
     width 1100px
     img
       display inline-block
+
+.banner-2
+  position relative
+  user-select none
+  width 350px
+  height 350px
+  overflow hidden
+  background white
+  img
+    position absolute
+    right -100%
