--- a/src/jade/banner-2.jade
+++ b/src/jade/banner-2.jade
@@ -1,6 +1,6 @@
 html
     head
-        title баннер
+        title баннер 2
         link(rel="stylesheet", href="css/banner-1.css")
         script(src="js/jquery.js")
         script(src="js/mine.min.js")
