--- a/src/styl/banner-1.styl
+++ b/src/styl/banner-1.styl
@@ -21,3 +21,14 @@
   img
     position absolute
     right -100%
+
+.banner-3
+  position relative
+  user-select none
+  width 240px
+  height 400px
+  overflow hidden
+  background white
+  img
+    position absolute
+    top 0
